--- a/faq.html
+++ b/faq.html
@@ -26,8 +26,8 @@
                     <a href="about.html" alt="About us">
                         <li>About Us</li>
                     </a>
-                    <a href="testimonials.html" alt="Testimonials from our clients and partners">
-                        <li>Testimonials</li>
+                    <a href="portfolio.html" alt="Portfolio & Testimonials from our clients and partners">
+                        <li>Portfolio</li>
                     </a>
                     <a href="faq.html" alt="FAQ">
                         <li id="current">FAQ</li>
