--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                         <a href="about.html" alt="About us">
                             <li>About Us</li>
                         </a>
-                        <a href="testimonials.html" alt="Testimonials from our clients and partners">
-                            <li>Testimonials</li>
+                        <a href="portfolio.html" alt="portfolio and Testimonials from our clients and partners">
+                            <li>Portfolio</li>
                         </a>
                         <a href="faq.html" alt="FAQ">
                             <li>FAQ</li>
@@ -79,9 +79,9 @@
                 <p>Want to learn more <a href="about.html" alt="About us">about</a> how we achieve this process? or
                     maybe you have a question? Have a look at our <a href="faq.html" alt="FAQ">FAQ</a>.</p>
 
-                <p>Unsure about what you've read and seen so far? Our partners aren't afraid to comment on the quality
-                    of our work. Check out their <a href="testimonials.html"
-                        alt="Testimonials from our clients and partners">testimonials</a>.</p>
+                <p>Unsure about what you've read and seen so far? We don't expect you to just take our word for it.
+                    Check out our<a href="portfolio.html"
+                        alt="Testimonials from our clients and partners">Portfolio</a>.</p>
                 <p>Like what you see so far? or maybe you still have questions? Reach out to us below and see what we
                     can do for you.
                 </p>
@@ -152,4 +152,5 @@
         });
     }
 </script>
+
 </html>
