--- a/portfolio.html
+++ b/portfolio.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="assets/css/style-testimonials.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/style-portfolio.css" rel="stylesheet" type="text/css" />
     <link rel="icon" type="image/x-icon" href="assets/images/site-wide/favicon.ico">
-    <title>Ronin 347 Testimonials</title>
+    <title>Ronin 347 Portfolio & Testimonials</title>
 </head>
 
 <body>
@@ -26,8 +26,8 @@
                     <a href="about.html" alt="About us">
                         <li>About Us</li>
                     </a>
-                    <a href="testimonials.html" alt="Testimonials from our clients and partners">
-                        <li id="current">Testimonials</li>
+                    <a href="portfolio.html" alt="Portfolio and Testimonials from our clients and partners">
+                        <li id="current">Portfolio</li>
                     </a>
                     <a href="faq.html" alt="FAQ">
                         <li>FAQ</li>
@@ -48,23 +48,22 @@
         <div class="logo">
         </div>
         <div class="page-name">
-            <h1 class="title">Testimonials</h1>
+            <h1>Portfolio</h1>
         </div>
     </header>
 
     <!-- page body, contains all testimonials-->
     <div class="project-container" id="fly">
-        <iframe src="https://www.youtube.com/embed/sUZLStS4j_c" title="The Fly Project - Onbaording video"
+        <iframe src="https://www.youtube.com/embed/lITWA-UmNck" title="The Fly Project X Puresport CBD"
             allowfullscreen></iframe>
         <div class="testimonial-text">
             <h2>Fly Functional Fitness</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
-                vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
-                convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
-                dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
-                ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
-                ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
-                mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p>
+            <p>We have worked with the Fly Project for many years creating bespoke content. Not just for their
+                instructional videos, but also live event coverage, crossover promotions, podcasts, onboarding videos
+                and hype boosting social
+                media clips. Check out more of our work on <a id="fly-insta"
+                    href="https://www.instagram.com/theflyprojectgla/" target="_blank" rel="noopener"
+                    alt="take a look at The Fly Project Instagram">The Fly Project Instagram.</a></p>
         </div>
     </div>
     <div class="project-container" id="suji">
@@ -82,57 +81,30 @@
             allowfullscreen></iframe>
         <div class="testimonial-text">
             <h2>Alison Crawford: Crossfit Athlete</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
-                vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
-                convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
-                dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
-                ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
-                ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
-                mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p>
+            <p>We created a short documentary piece for Ali, following her injury management and training on the run up
+                to the 2020 CrossFit games.</p>
         </div>
     </div>
     <div class="project-container" id="adam">
         <iframe src="https://www.youtube.com/embed/pbS2GWaIXCc" title="Adam Ashe: Professional Rugby Player"
             allowfullscreen></iframe>
         <div class="testimonial-text">
-            <h2><em>"Adam Ashe: Professional Rugby Player"</em></h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
-                vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
-                convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
-                dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
-                ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
-                ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
-                mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p>
+            <h2>Adam Ashe: Professional Rugby Player</h2>
+            <p>We worked with Adam to create professional promotional content for him, ahead of his transfer to Los
+                Angeles
+                to play for the Los Angeles Giltinis.</p>
         </div>
     </div>
-    <div class="project-container" id="ross-park">
-        <iframe src="https://www.youtube.com/embed/T7gvCXtF7wE" title="Ross Park: Personal Trainer"
+    <div class="project-container" id="robyn">
+        <iframe src="https://www.youtube.com/embed/CydPBFliWgY" title="Robyn Sutherland: Personal Trainer"
             allowfullscreen></iframe>
         <div class="testimonial-text">
-            <h2>Ross Park: PT/Gym Owner</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
-                vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
-                convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
-                dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
-                ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
-                ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
-                mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p>
+            <h2>Robyn Sutherland: Personal Trainer</h2>
+            <p>We worked with Robyn to go beyond a standard introductory video. We worked with her so that she could let
+                her personality and passion for coaching shine through. We developed small narratives within her content
+                to help inspire viewers and would-be clients.</p>
         </div>
     </div>
-    <div class="project-container" id="puresport">
-        <iframe src="https://www.youtube.com/embed/lITWA-UmNck" title="Puresport CBD" allowfullscreen></iframe>
-        <div class="testimonial-text">
-            <h2>Puresport CBD</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a
-                vehicula. Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh
-                convallis euismod. Nulla vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et
-                dapibus neque. In hac habitasse platea dictumst. Integer sed lobortis risus. Pellentesque
-                ultrices venenatis venenatis. Aliquam facilisis velit ut mauris viverra dignissim. Lorem
-                ipsum dolor sit amet, consectetur adipiscing elit. Quisque posuere congue diam, eu vehicula
-                mauris tempor eget. Cras ornare semper egestas. Donec consectetur hendrerit nibh.</p>
-        </div>
-    </div>
-
     <!-- footer and social media buttons -->
     <footer>
         <div id="social-footer">
@@ -146,7 +118,7 @@
                                 class="fa-brands fa-twitter-square"></i></a>
                     </li>
                     <li>
-                        <a id="youtube" href="https://youtube.com" target="_blank" rel="noopener"
+                        <a id="youtube" href="https://www.youtube.com/channel/UCMUcUJDcDCOiz20KZNoGG_A" target="_blank" rel="noopener"
                             aria-label="watch our youtube playlist (opens in a new tab)"><i
                                 class="fa-brands fa-youtube"></i></a>
                     </li>
