--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@
                     <a href="about.html" alt="About us">
                         <li id="current">About Us</li>
                     </a>
-                    <a href="testimonials.html" alt="Testimonials from our clients and partners">
-                        <li>Testimonials</li>
+                    <a href="portfolio.html" alt="Portfolio and Testimonials from our clients and partners">
+                        <li>Portfolio</li>
                     </a>
                     <a href="faq.html" alt="FAQ">
                         <li>FAQ</li>
