--- a/index.html
+++ b/index.html
@@ -22,24 +22,14 @@
                 <button class="nav-menu"><span id="big-nav">Menu</span><i class="fa-solid fa-bars"></i></button>
                 <div class="panel">
                     <ul>
-                        <a href="index.html" alt="home">
-                            <li id="current">Home</li>
-                        </a>
-                        <a href="about.html" alt="About us">
-                            <li>About Us</li>
-                        </a>
-                        <a href="portfolio.html" alt="portfolio and Testimonials from our clients and partners">
-                            <li>Portfolio</li>
-                        </a>
-                        <a href="faq.html" alt="FAQ">
-                            <li>FAQ</li>
-                        </a>
-                        <a href="#social-footer" alt="Social media contacts">
-                            <li>Social</li>
-                        </a>
-                        <a href="contact.html" alt="contact us">
-                            <li>Contact</li>
-                        </a>
+                        <li id="current"><a href="index.html" aria-label="home">Home</a></li>
+                        <li> <a href="about.html" aria-label="About us">About Us</a></li>
+                        <li><a href="portfolio.html"
+                                aria-label="portfolio and Testimonials from our clients and partners">Portfolio</a></li>
+                        <li><a href="faq.html" aria-label="FAQ">FAQ</a></li>
+                        <li><a href="#social-footer" aria-label="Social media contacts">Social</a></li>
+
+                        <li><a href="contact.html" aria-label="contact us">Contact</a></li>
                     </ul>
                 </div>
             </div>
