--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
                     in both of these industries allow us to bring the quality and vision of Professional cinematic
                     production, whether it be narrative-based, documentary, promotional or tutorial content.</p>
 
-                <p>Want to learn more <a href="about.html" alt="About us">about</a> how we achieve this process? or
-                    maybe you have a question? Have a look at our <a href="faq.html" alt="FAQ">FAQ</a>.</p>
+                <p>Want to learn more <a href="about.html" aria-label="About us">about</a> how we achieve this process? or
+                    maybe you have a question? Have a look at our <a href="faq.html" aria-label="FAQ">FAQ</a>.</p>
 
                 <p>Unsure about what you've read and seen so far? We don't expect you to just take our word for it.
                     Check out our<a href="portfolio.html"
-                        alt="Testimonials from our clients and partners">Portfolio</a>.</p>
+                        aria-label="Portfolio & Testimonials from our clients and partners">Portfolio</a>.</p>
                 <p>Like what you see so far? or maybe you still have questions? Reach out to us below and see what we
                     can do for you.
                 </p>
                 <h2 class="contact-head">Drop us an email</h2>
-                <p class="contact-mail">@ <a href="contact.html" alt="contact us by email">ronin347media@gmail.com</a>
+                <p class="contact-mail">@ <a href="contact.html" aria-label="contact us by email">ronin347media@gmail.com</a>
                 </p>
             </div>
         </section>
