validate code on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,6 @@
                     <li><a href="faq.html" aria-label="FAQ">FAQ</a></li>
                     <li><a href="#social-footer" aria-label="Social media contacts">Social</a></li>
                     <li><a href="contact.html" aria-label="contact us">Contact</a></li>
-                    </a>
                 </ul>
             </div>
         </div>
@@ -53,7 +52,7 @@
                 and hype boosting social
                 media clips. Check out more of our work on <a id="fly-insta"
                     href="https://www.instagram.com/theflyprojectgla/" target="_blank" rel="noopener"
-                    alt="take a look at The Fly Project Instagram">The Fly Project Instagram.</a></p>
+                    aria-label="take a look at The Fly Project Instagram">The Fly Project Instagram.</a></p>
         </div>
     </div>
     <div class="project-container" id="suji">
