--- a/about.html
+++ b/about.html
@@ -21,12 +21,12 @@
             <div class="panel">
                 <ul>
                     <li><a href="index.html" aria-label="home">Home</a></li>
-                        <li id="current"> <a href="about.html" aria-label="About us">About Us</a></li>
-                        <li><a href="portfolio.html"
-                                aria-label="portfolio and Testimonials from our clients and partners">Portfolio</a></li>
-                        <li><a href="faq.html" aria-label="FAQ">FAQ</a></li>
-                        <li><a href="#social-footer" aria-label="Social media contacts">Social</a></li>
-                        <li><a href="contact.html" aria-label="contact us">Contact</a></li>
+                    <li id="current"> <a href="about.html" aria-label="About us">About Us</a></li>
+                    <li><a href="portfolio.html"
+                            aria-label="portfolio and Testimonials from our clients and partners">Portfolio</a></li>
+                    <li><a href="faq.html" aria-label="FAQ">FAQ</a></li>
+                    <li><a href="#social-footer" aria-label="Social media contacts">Social</a></li>
+                    <li><a href="contact.html" aria-label="contact us">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -44,11 +44,19 @@
     <!-- main body text -->
     <section class="about-container">
         <div class="about">
-            <h2>Lorem Ipsum</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum volutpat orci a vehicula.
-                Maecenas rutrum ligula ut risus fringilla fringilla. Nunc varius velit a nibh convallis euismod. Nulla
-                vel augue lacinia, tincidunt nibh in, ultrices purus. Nunc et dapibus neque. In hac habitasse platea
-                dictumst. Integer sed lobortis risus.</p>
+            <p>Hi, I'm Dan, I run Ronin347.<br><br>
+                I grew up watching martial arts and old Kurosawa films and I used to think they were the absolute bees
+                knees. This sparked my passion for cinematography.<br><br>
+                I have spent the majority of my life honing my craft of lifting heavy stuff and putting it back down
+                again, only to then go and lift it up again. I took this to the next level and qualified as a personal
+                trainer.<br><br>
+                I also attended the Royal Conservatoire of Scotland, making me a <em>classically trained</em> actor.<br><br>
+                After making some moderate success in acting, I decided to take my personal training experience, my love
+                for action cinematography and blend it all together to create bespoke and unique cinematic experiences.
+                <br><br>
+                I'm always looking to challenge myself (haven't been beaten yet), so if you have a project you think
+                could be tough, let's size it up together.
+            </p>
         </div>
         <!-- page imagery -->
         <div class="image1"></div>
@@ -117,4 +125,5 @@
         });
     }
 </script>
+
 </html>
