move <script> in html into <body> to resolve code validation error

--- a/index.html
+++ b/index.html
@@ -1,3 +1,124 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="assets/css/style-index.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" type="image/x-icon" href="assets/images/site-wide/favicon.ico">
+    <title>Ronin 347 Media</title>
+</head>
+
+<body>
+    <!-- Background Image-->
+    <div class="bg">
+    </div>
+
+    <!-- Navigation -->
+    <div class="index-layout">
+        <nav>
+            <div>
+                <button class="nav-menu"><span id="big-nav">Menu</span><i class="fa-solid fa-bars"></i></button>
+                <div class="panel">
+                    <ul>
+                        <li id="current"><a href="index.html" aria-label="home">Home</a></li>
+                        <li> <a href="about.html" aria-label="About us">About Us</a></li>
+                        <li><a href="portfolio.html"
+                                aria-label="portfolio and Testimonials from our clients and partners">Portfolio</a></li>
+                        <li><a href="faq.html" aria-label="FAQ">FAQ</a></li>
+                        <li><a href="#social-footer" aria-label="Social media contacts">Social</a></li>
+
+                        <li><a href="contact.html" aria-label="contact us">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!-- Logo/header and Hero Video -->
+        <div id="logo-positioner">
+            <div class="logo" id="logo-container">
+                <img src="assets/images/index/ronin-logo-clip.png" alt="Ronin347 Logo">
+            </div>
+        </div>
+        <header class="hero">
+            <div id="hero-project">
+                <video autoplay muted loop>
+                    <source src="assets/videos/ronin-hero-vid.mov" type="video/mp4">
+                </video>
+                <div class="hero-link"><a href="404.html">Watch our Portfolio</a></div>
+                <div class="ink-partition ip-bottom-hero"></div>
+            </div>
+            <div class="ink-partition ip-top-cta"></div>
+        </header>
+
+        <!-- Main body text -->
+        <section class="call-to-action">
+
+            <div id="call-to-actions">
+                <h2>Tell Your Story</h2>
+                <p>At Ronin347, we specialise cinematic promotional content for independent businesses.<br> But we don't
+                    just stop there. Our services are underpinned by extensive experience in the fitness industry,
+                    coupled with accomplishments across TV, film, and theatres across the world.<br> Being deeply rooted
+                    in both of these industries allow us to bring the quality and vision of Professional cinematic
+                    production, whether it be narrative-based, documentary, promotional or tutorial content.</p>
+
+                <p>Want to learn more <a href="about.html" aria-label="About us">about</a> how we achieve this process? or
+                    maybe you have a question? Have a look at our <a href="faq.html" aria-label="FAQ">FAQ</a>.</p>
+
+                <p>Unsure about what you've read and seen so far? We don't expect you to just take our word for it.
+                    Check out our <a href="portfolio.html"
+                        aria-label="Portfolio & Testimonials from our clients and partners">Portfolio</a>.</p>
+                <p>Like what you see so far? or maybe you still have questions? Reach out to us below and see what we
+                    can do for you.
+                </p>
+                <h2 class="contact-head">Drop us an email</h2>
+                <p class="contact-mail">@ <a href="contact.html" aria-label="contact us by email">ronin347media@gmail.com</a>
+                </p>
+            </div>
+        </section>
+    </div>
+
+    <!-- footer -->
+    <footer>
+        <div class="footer" id="social-footer">
+            <div class="ink-partition ip-bottom-cta"></div>
+            <div id="social">
+                <h2>Follow us</h2>
+                <ul class="social-buttons">
+                    <li>
+                        <a id="twitter" href="https://twitter.com" target="_blank" rel="noopener"
+                            aria-label="Visit our twitter page (opens in a new tab)"><i
+                                class="fa-brands fa-twitter-square"></i></a>
+                    </li>
+                    <li>
+                        <a id="youtube" href="https://youtube.com" target="_blank" rel="noopener"
+                            aria-label="watch our youtube playlist (opens in a new tab)"><i
+                                class="fa-brands fa-youtube"></i></a>
+                    </li>
+                    <li>
+                        <a id="instagram" href="https://www.instagram.com/ronin347media/" target="_blank" rel="noopener"
+                            aria-label="Visit our Instagram (opens in a new tab)"><i
+                                class="fa-brands fa-instagram"></i></a>
+                    </li>
+                </ul>
+            </div>
+            <!-- link to my github and copyright information -->
+            <div class="footer-creds">
+                <div class="creds-1" id="cal-rex-git">
+                    <p>Site Developed for Ronin347 by <a href="https://github.com/Cal-Rex"
+                            aria-label="link to Cal-Rex's Github" target="_blank" rel="noopener">Cal-Rex</a></p>
+                </div>
+                <div class="creds-2" id="copyright">
+                    <p>Copyright Ronin347 Media 2022 ©</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- script for social media icons -->
+<!-- script created by fontawesome.com-->
+<script src="https://kit.fontawesome.com/85f184e105.js" crossorigin="anonymous"></script>
+
 <!-- script for navigation button -->
 <!-- script created by w3C Schools -->
 <script>
@@ -16,3 +137,5 @@
         });
     }
 </script>
+</body>
+</html>
