--- a/about.html
+++ b/about.html
@@ -44,8 +44,8 @@
     <!-- main body text -->
     <section class="about-container">
         <div class="about">
-            <p>Hi, I'm Dan, I run Ronin347.<br><br>
-                I grew up watching martial arts and old Kurosawa films and I used to think they were the absolute bees
+            <h3>Hi, I'm Dan, I run Ronin347.</h3>
+                <p>I grew up watching martial arts and old Kurosawa films and I used to think they were the absolute bees
                 knees. This sparked my passion for cinematography.<br><br>
                 I have spent the majority of my life honing my craft of lifting heavy stuff and putting it back down
                 again, only to then go and lift it up again. I took this to the next level and qualified as a personal
