add heading to contact, fix code error in faq

--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,7 @@
 
     <!-- contact form, action link taken from code institute for the purpose of assessment, text area is deliberately optional -->
     <section class="contact-form">
+        <h3>Contact Form</h3>
         <form method="POST" action="https://formdump.codeinstitute.net/" class="signup-form" target="_blank"
             rel="noopener">
             <label for="name">Name:</label>
