--- a/faq.html
+++ b/faq.html
@@ -84,7 +84,7 @@
                 team using the handle @Ronin347Media.</p>
         </div>
         <div class="push-contact"><h3>Question not answered?</h3>
-        <p><a href="contact.html" alt="contact us">Ask us a question</a></p></div>
+        <p><a href="contact.html" aria-label="contact us">Ask us a question</a></p></div>
     </section>
 
 
