fix spelling errors in 404 and 500

--- a/500.html
+++ b/500.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="assets/images/site-wide/favicon.ico">
     <title>Oh no! 500: Bad Gateway</title>
 </head>
-<!-- click the played card to go back ot the index page-->
+<!-- click the played card to go back to the index page-->
 
 <body>
     <div class="container">
@@ -31,7 +31,7 @@
     </div>
     <!-- footer acknowledgement, art by AlanMac95 -->
     <p class="acknowledgements"><span>art created by <a href="https://www.deviantart.com/alanmac95"
-                alt="visit the artist that drew this awesome pot of greed">AlanMac95</a></span></p>
+                aria-label="visit the artist that drew this awesome pot of greed">AlanMac95</a></span></p>
 </body>
 
 </html>
