--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <video autoplay muted loop>
                     <source src="assets/videos/ronin-hero-vid.mov" type="video/mp4">
                 </video>
-                <div class="hero-link"><a href="404.html">Watch our Portfolio</a></div>
+                <div class="hero-link"><a href="portfolio.html">Watch our Portfolio</a></div>
                 <div class="ink-partition ip-bottom-hero"></div>
             </div>
             <div class="ink-partition ip-top-cta"></div>
