add youtube channel link to social

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                 class="fa-brands fa-twitter-square"></i></a>
                     </li>
                     <li>
-                        <a id="youtube" href="https://youtube.com" target="_blank" rel="noopener"
+                        <a id="youtube" href="https://www.youtube.com/channel/UCMUcUJDcDCOiz20KZNoGG_A" target="_blank" rel="noopener"
                             aria-label="watch our youtube playlist (opens in a new tab)"><i
                                 class="fa-brands fa-youtube"></i></a>
                     </li>
