--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <header class="hero">
             <div id="hero-project">
-                <video autoplay muted loop>
+                <video autoplay muted loop playsinline>
                     <source src="assets/videos/ronin-hero-vid.mov" type="video/mp4">
                 </video>
                 <div class="hero-link"><a href="portfolio.html">Watch our Portfolio</a></div>
