--- a/404.html
+++ b/404.html
@@ -30,8 +30,8 @@
         </div>
     </div>
     <!-- footer acknowledgement, art by AlanMac95 -->
-    <p class="acknowledgements"><span>art created by <a href="https://www.deviantart.com/alanmac95"
-                aria-label="visit the artist that drew this awesome pot of greed">AlanMac95</a></span></p>
+    <footer class="acknowledgements"><p><span>art created by <a href="https://www.deviantart.com/alanmac95"
+                aria-label="visit the artist that drew this awesome pot of greed">AlanMac95</a></span></p></footer>
 </body>
 
 </html>
