testing.md: base styling

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <div id="call-to-actions">
                 <h2>Tell Your Story</h2>
-                <p>At Ronin347, we specialise cinematic promotional content for independent businesses.<br> But we don't
+                <p>At Ronin347, we specialise in cinematic promotional content for independent businesses.<br> But we don't
                     just stop there. Our services are underpinned by extensive experience in the fitness industry,
                     coupled with accomplishments across TV, film, and theatres across the world.<br> Being deeply rooted
                     in both of these industries allow us to bring the quality and vision of Professional cinematic
