readme: add technologies section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <video preload autoplay muted loop playsinline>
                     <source src="assets/videos/ronin-hero-vid.mov" type="video/mp4">
                 </video>
-                <div class="hero-link"><a href="404.html">Watch our Portfolio</a></div>
+                <div class="hero-link"><a href="portfolio.html">Watch our Portfolio</a></div>
                 <div class="ink-partition ip-bottom-hero"></div>
             </div>
             <div class="ink-partition ip-top-cta"></div>
