add meta description to all pages

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ronin 347 Media: Production, Coaching and Consutlancy with Dan Cahill - About page">
     <link href="assets/css/style-about.css" rel="stylesheet" type="text/css" />
     <link rel="icon" type="image/x-icon" href="assets/images/site-wide/favicon.ico">
     <title>About Ronin 347</title>
