--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ronin 347 Media: Production, 404: page not found">
     <link href="assets/css/style-404-500.css" rel="stylesheet" type="text/css" />
     <link rel="icon" type="image/x-icon" href="assets/images/site-wide/favicon.ico">
     <title>Oops! 404: page not found</title>
