--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Logo/header and Hero Video -->
         <div id="logo-positioner">
             <div class="logo" id="logo-container">
-                <img src="assets/images/site-wide/ronin-logo-clip.png" alt="Ronin347 Logo">
+                <img src="assets/images/site-wide/ronin-logo-clip.webp" alt="Ronin347 Logo">
             </div>
         </div>
         <header class="hero">
