--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
                                 class="fa-brands fa-youtube"></i></a>
                     </li>
                     <li>
-                        <a id="instagram" href="https://instagram.com" target="_blank" rel="noopener"
+                        <a id="instagram" href="https://www.instagram.com/ronin347media/" target="_blank" rel="noopener"
                             aria-label="Visit our Instagram (opens in a new tab)"><i
                                 class="fa-brands fa-instagram"></i></a>
                     </li>
