remove about.html ahead of revamp

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="panel">
                 <ul>
                     <li id="current"><a href="index.html" aria-label="home">Home</a></li>
-                    <li> <a href="about.html" aria-label="About us">About Us</a></li>
+                    <li> <a href="index.html" aria-label="About us">About Us</a></li>
                     <li><a href="portfolio.html"
                             aria-label="portfolio and Testimonials from our clients and partners">Portfolio</a></li>
                     <li><a href="faq.html" aria-label="FAQ">FAQ</a></li>
@@ -63,8 +63,7 @@
                     in both of these industries allow us to bring the quality and vision of Professional cinematic
                     production, whether it be narrative-based, documentary, promotional or tutorial content.</p>
 
-                <p>Want to learn more <a href="about.html" aria-label="About us">about</a> how we achieve this process? or
-                    maybe you have a question? Have a look at our <a href="faq.html" aria-label="FAQ">FAQ</a>.</p>
+                <p>have a question? Have a look at our <a href="faq.html" aria-label="FAQ">FAQ</a>.</p>
 
                 <p>Unsure about what you've read and seen so far? We don't expect you to just take our word for it.
                     Check out our <a href="portfolio.html"
