--- a/faq.html
+++ b/faq.html
@@ -22,7 +22,7 @@
             <div class="panel">
                 <ul>
                     <li><a href="index.html" aria-label="home">Home</a></li>
-                    <li> <a href="about.html" aria-label="About us">About Us</a></li>
+                    <li> <a href="index.html" aria-label="About us">About Us</a></li>
                     <li><a href="portfolio.html"
                             aria-label="portfolio and Testimonials from our clients and partners">Portfolio</a></li>
                     <li id="current"><a href="faq.html" aria-label="FAQ">FAQ</a></li>
